# android-bindings-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  docs.yaml
.vim-lsp-settings/: settings.json
examples/: simple.rs
examples/simple/: Cargo.toml  manifest.yaml
examples/simple/src/: lib.rs
java/com/example/: NativeRunnable.java
src/: lib.rs
