[workspace]
members = [
    "examples/simple"
]
resolver = "2"

[package]
name = "android-bindings"
version = "0.1.0"
edition = "2024"


[build-dependencies]
jaffi = { version = "0.2.0" }
zip = "6.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jaffi_support = { version = "0.2.0" }


[patch.crates-io]
jaffi = { git = "https://github.com/simlay/jaffi.git", branch = "android-bindings" }
jaffi_support = { git = "https://github.com/simlay/jaffi.git", branch = "android-bindings" }
#jaffi =         { path = "../jaffi/" }
#jaffi_support = { path = "../jaffi/jaffi_support/" }
