[workspace]
members = [
    "examples/simple"
]
resolver = "2"

[package]
name = "android-bindings"
version = "0.1.0"
edition = "2024"


[build-dependencies]
jaffi = { version = "0.2.0" }
zip = "8.1.0"
javac = "0.1"
android-build = "0.1.3"

[target.'cfg(target_os = "android")'.dependencies]
jaffi_support = { version = "0.2.0" }
android-activity = { version = "0.6", features = ["native-activity"] }
ndk-context = "0.1.1"


[patch.crates-io]
jaffi         = { git = "https://github.com/simlay/jaffi.git", branch = "android-bindings" }
jaffi_support = { git = "https://github.com/simlay/jaffi.git", branch = "android-bindings" }
#jaffi =         { path = "../jaffi/" }
#jaffi_support = { path = "../jaffi/jaffi_support/" }
