[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
example_exit = []

[target.'cfg(target_os = "android")'.dependencies]
jaffi_support = { version = "0.2.0" }
log = "0.4.14"
ndk-context = "0.1.1"
ndk = { version = "0.9", features = ["nativewindow"] }
android_logger = "0.15.0"
android-activity = { version = "0.6", features = ["native-activity"] }
winit = { version = "0.30.0", features = ["android-native-activity"] }
android-bindings = { path = "../../" }

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36

[package.metadata.android]
package = "com.simlay.example"

[package.metadata.android.application]
debuggable = true
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
#theme = "@android:style/Theme.Translucent.NoTitleBar"
#theme = "@style/Theme.AppCompat.Light"
